--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ ed25519-dalek = { version = "1" }
 hex = "0.4.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.57"
+toml = "0.5.9"
 dirs = "3.0"
 shellexpand = "2.1.0"
 slip10 = "0.4.3"
