--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ bip39 = { version = "1.0.0", features = [ "rand" ] }
 bs58 = "0.3"
 ed25519-dalek = { version = "1" }
 hex = "0.4.2"
+linked-hash-map = { version = "0.5", features = ["serde_impl"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.57"
 toml = "0.5.9"
